# locations-api

./: .env.local  .gitignore  README.md  docker-compose.yml  pyproject.toml
compose/local/django/: Dockerfile  entrypoint
config/: asgi.py  settings.py  urls.py  wsgi.py
locations/: helpers.py  managers.py  models.py  serializers.py  urls.py  views.py
locations/migrations/: 0001_initial.py
locations/tests/: test_google_api_helper.py  test_location_request_model.py  test_location_viewset.py  test_serializers.py
